--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -505,6 +505,9 @@ Other Deprecations
 - Deprecated parameter ``obj`` in :meth:`GroupBy.get_group` (:issue:`53545`)
 - Deprecated positional indexing on :class:`Series` with :meth:`Series.__getitem__` and :meth:`Series.__setitem__`, in a future version ``ser[item]`` will *always* interpret ``item`` as a label, not a position (:issue:`50617`)
 - Deprecated replacing builtin and NumPy functions in ``.agg``, ``.apply``, and ``.transform``; use the corresponding string alias (e.g. ``"sum"`` for ``sum`` or ``np.sum``) instead (:issue:`53425`)
+- Deprecated strings ``T``, ``L``, ``U``, and ``N`` denoting aliases for time series frequencies. Please use ``min``, ``ms``, ``us``, and ``ns`` instead of ``T``, ``L``, ``U``, and ``N`` (:issue:`52536`)
+- Deprecated strings ``T``, ``L``, ``U``, and ``N`` denoting resolutions in :meth:`Timedelta.resolution_string`. Please use ``min``, ``ms``, ``us``, and ``ns`` instead of ``T``, ``L``, ``U``, and ``N`` (:issue:`52536`)
+- Deprecated strings ``T``, ``L``, ``U``, and ``N`` denoting units in :class:`Timedelta`. Please use ``min``, ``ms``, ``us``, and ``ns`` instead of ``T``, ``L``, ``U``, and ``N`` (:issue:`52536`)
 - Deprecated strings ``T``, ``t``, ``L`` and ``l`` denoting units in :func:`to_timedelta` (:issue:`52536`)
 - Deprecated the "method" and "limit" keywords in ``ExtensionArray.fillna``, implement and use ``pad_or_backfill`` instead (:issue:`53621`)
 - Deprecated the "method" and "limit" keywords on :meth:`Series.fillna`, :meth:`DataFrame.fillna`, :meth:`SeriesGroupBy.fillna`, :meth:`DataFrameGroupBy.fillna`, and :meth:`Resampler.fillna`, use ``obj.bfill()`` or ``obj.ffill()`` instead (:issue:`53394`)
