--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -16,7 +16,7 @@ Enhancements
 
 .. _whatsnew_220.enhancements.enhancement1:
 
-enhancement1
+:class:`GroupBy` now accepts an empty list of ``keys`` and applies any aggregation over all the data (:issue:`35366`)
 ^^^^^^^^^^^^
 
 .. _whatsnew_220.enhancements.enhancement2:
@@ -241,7 +241,7 @@ Plotting
 
 Groupby/resample/rolling
 ^^^^^^^^^^^^^^^^^^^^^^^^
-- :class:`GroupBy` now accepts an empty list of ``keys`` and applies any aggregation over all the data (:issue:`35366`)
+-
 -
 
 Reshaping
