--- a/doc/source/whatsnew/v0.10.0.rst
+++ b/doc/source/whatsnew/v0.10.0.rst
@@ -185,30 +185,31 @@ labeled the aggregated group with the end of the interval: the next day).
     In [6]: import io
 
     In [7]: data = """
-      ....: a,b,c
-      ....: 1,Yes,2
-      ....: 3,No,4
-            """
+      ...: a,b,c
+      ...: 1,Yes,2
+      ...: 3,No,4
+      ...: """
+      ...:
 
     In [8]: print(data)
-    Out[8]:
-    a,b,c
-    1,Yes,2
-    3,No,4
+
+        a,b,c
+        1,Yes,2
+        3,No,4
 
     In [9]: pd.read_csv(io.StringIO(data), header=None)
     Out[9]:
-       0    1  2
-    0  a    b  c
-    1  1  Yes  2
-    2  3   No  4
+           0    1  2
+    0      a    b  c
+    1      1  Yes  2
+    2      3   No  4
 
     In [10]: pd.read_csv(io.StringIO(data), header=None, prefix="X")
     Out[10]:
-      X0   X1 X2
-    0  a    b  c
-    1  1  Yes  2
-    2  3   No  4
+            X0   X1 X2
+    0       a    b  c
+    1       1  Yes  2
+    2       3   No  4
 
 - Values like ``'Yes'`` and ``'No'`` are not interpreted as boolean by default,
   though this can be controlled by new ``true_values`` and ``false_values``
